--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -35,6 +35,7 @@
     font-weight: 700;
     line-height: 2.8;
     text-align: left;
+    margin-bottom: 15px;
 }
 
 .footerItems {
